tests/NormalTests/paczka1/fuzzy1/28856812.err
Error in line 6: A3 S362 27,9
Error in line 5: h8XsHHqk A801 15,4
Error in line 9: h8XsHHqk S362 85,3
Error in line 14: A3 S362 115,5
Error in line 15: pnk6aytrlKB A3 72,0
Error in line 18: pnk6aytrlKB S362 78,4
Error in line 26: A3 A801 19,3
Error in line 36: A3 A666 97,5
